# make-more

./: README.md  main.py  malayalam_chars_mapping.pkl  malayalam_syllabeles_mapping.pkl  merged_chars_mapping.pkl  pyproject.toml  ui.py  utils.py  vocabulary.pkl
notebooks/: build_malayalam_gpt.ipynb  make_more.ipynb  makemore3.ipynb  malayalam_tokenizer.ipynb  nano_gpt.ipynb  tokenizer.ipynb  very_small_langiage_model.ipynb
